2004-10-22  Johan Dahlin  <johan@gnome.org>

	* flumotion/worker/worker.py: Make sure that we send a tuple with
	exactly one item.

2004-10-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	  add errback handling to remote methods
	* flumotion/worker/worker.py:
	  fix docs

2004-10-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/main.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	Check if elements are present on the worker before allowing us to
	continue. Add some simple logging in the wizard. And Fix so
	--wizard does something useful.

2004-10-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_worker_worker.py:
	  add regression tests
	* flumotion/worker/job.py:
	* flumotion/worker/main.py:
	* flumotion/worker/worker.py:
	  install a signal handler correctly, tying into twisted's SIGCHLD
	  handler.  This cleans up zombie workers nicely and closes #41

2004-10-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/bttv/bttv.py:
	* flumotion/component/producers/bttv/bttv.xml:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	TV-Card producer should work better now.
	
2004-10-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/admin.py:
	* flumotion/common/common.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_common.py:

	Make a generic interface to call from the admin interface into the
	worker. Add a method in common with regression tests to print a
	repr for args/kwargs.

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to svn, yay

=== release 0.1.0 ===

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: releasing 0.1.0, "Agua"

2004-10-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/admin.glade:
	Disable Save in the user interface for now
